--- a/style.css
+++ b/style.css
@@ -6,4 +6,47 @@ body {
 
 .container {
   background-color: rgb(165, 165, 165);
+}
+
+.completed {
+  text-decoration: line-through;
+}
+
+/* Add this CSS for the modal */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #414141;
+  margin: 15% auto;
+  padding: 20px;
+  border: 5px dashed #000000;
+  width: 80%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.white {
+  background-color: white;
 }/*# sourceMappingURL=style.css.map */
