--- a/style.scss
+++ b/style.scss
@@ -27,10 +27,10 @@ body{
 }
 
 .modal-content {
-    background-color: #fefefe;
+    background-color: #414141;
     margin: 15% auto;
     padding: 20px;
-    border: 1px solid #888;
+    border: 5px dashed #000000;
     width: 80%;
 }
 
@@ -46,4 +46,8 @@ body{
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+.white{
+    background-color: white;
 }
