--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ body {
 
 .datetime {
   text-align: center;
-  color: red;
-  font-size: 24px;
-  margin-top: 50px;
+  font-size: 30px;
+  padding: 20px;
 }/*# sourceMappingURL=style.css.map */
