--- a/style.scss
+++ b/style.scss
@@ -25,9 +25,8 @@ body{
 
 .datetime {
     text-align: center;
-    color: red;
-    font-size: 24px;
-    margin-top: 50px;
+    font-size: 30px;
+    padding: 20px;
 }
 
 
