--- a/style.css
+++ b/style.css
@@ -1,11 +1,128 @@
-body {
-  padding: 0;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+* {
   margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+}
+
+.wrapper {
+  position: relative;
+  width: 400px;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.12);
+  margin-bottom: 200px;
+}
+
+.wrapper header {
+  height: 75px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px;
+}
+
+header .icons {
+  display: flex;
+  padding: 10px;
+}
+
+header .icons span {
+  height: 38px;
+  width: 38px;
+  margin: 0 1px;
+  cursor: pointer;
+  color: #878787;
+  text-align: center;
+  line-height: 38px;
+  font-size: 1.9rem;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  border-radius: 50%;
+}
+
+.icons span:last-child {
+  margin-right: -10px;
+}
+
+header .icons span:hover {
+  background: #f2f2f2;
+}
+
+header .current-date {
+  font-size: 1.125rem;
+  font-weight: 500;
+  flex-grow: 1;
+  text-align: left;
+}
+
+.calendar {
+  height: 400px;
+  padding: 15px;
+}
+
+.calendar ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  text-align: center;
+}
+
+.calendar .days {
+  margin-bottom: 20px;
+}
+
+.calendar li {
+  color: #333;
+  width: 14.2857142857%;
+  font-size: 1.07rem;
+}
+
+.calendar .weeks li {
+  font-weight: 500;
+  cursor: default;
+}
+
+.calendar .days li {
+  z-index: 1;
+  cursor: pointer;
+  position: relative;
+  margin-top: 30px;
+}
+
+.days li.inactive {
+  color: #aaa;
+}
+
+.days li.active {
+  color: #fff;
+}
+
+.days li::before {
+  position: absolute;
+  content: "";
+  left: 50%;
+  top: 50%;
+  height: 40px;
+  width: 40px;
+  z-index: -1;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.days li.active::before {
+  background: #ff9736;
+}
+
+.days li:not(.active):hover::before {
+  background: #f2f2f2;
 }
 
 .footer {
   position: fixed;
   bottom: 0;
+  height: 10%;
   width: 100%;
   display: flex;
   align-items: center;
@@ -19,12 +136,11 @@ body {
   background-color: rgb(59, 147, 255);
   border: 3px solid rgb(74, 167, 255);
   position: relative;
-  bottom: 50px;
+  bottom: 30px;
   border-radius: 50%;
 }
 
-.datetime {
-  text-align: center;
-  font-size: 30px;
+.toDoAppLogo {
+  font-size: 2rem;
   padding: 20px;
 }/*# sourceMappingURL=style.css.map */
