--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
   width: 400px;
   background: #fff;
   border-radius: 10px;
+  border: 3px solid black;
   box-shadow: 0 15px 40px rgba(0, 0, 0, 0.12);
-  margin-bottom: 200px;
 }
 
 .wrapper header {
@@ -25,6 +25,9 @@
 header .icons {
   display: flex;
   padding: 10px;
+  flex-grow: 1;
+  align-items: center;
+  justify-content: center;
 }
 
 header .icons span {
@@ -54,7 +57,7 @@ header .current-date {
   font-size: 1.125rem;
   font-weight: 500;
   flex-grow: 1;
-  text-align: left;
+  text-align: center;
 }
 
 .calendar {
@@ -99,6 +102,10 @@ header .current-date {
   color: #fff;
 }
 
+.days li:not(.active)::after {
+  color: white;
+}
+
 .days li::before {
   position: absolute;
   content: "";
@@ -119,6 +126,10 @@ header .current-date {
   background: #f2f2f2;
 }
 
+#jumpToToday {
+  color: #ff9736;
+}
+
 .footer {
   position: fixed;
   bottom: 0;
@@ -127,20 +138,53 @@ header .current-date {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(146, 146, 146, 0.427);
-  color: white;
+  background-color: rgb(173, 173, 173);
+  border-top: 3px solid black;
+  color: rgb(255, 255, 255);
   text-align: center;
+  z-index: 2;
 }
 
 .addTask {
   background-color: rgb(59, 147, 255);
-  border: 3px solid rgb(74, 167, 255);
+  border: 3px solid rgb(0, 0, 0);
+  cursor: pointer;
+  box-shadow: 10px 15px 40px rgba(0, 0, 0, 0.12);
   position: relative;
-  bottom: 30px;
+  bottom: 50%;
   border-radius: 50%;
 }
 
 .toDoAppLogo {
   font-size: 2rem;
   padding: 20px;
+}
+
+.modal {
+  display: none;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  height: 80%;
+  border-radius: 10px;
+  border: 3px solid black;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 65%;
+  z-index: -2;
+}
+
+.close {
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
