--- a/style.css
+++ b/style.css
@@ -162,24 +162,20 @@ header .current-date {
 
 .modal {
   display: none;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
 }
 
 .modal-content {
   background-color: #fefefe;
   height: 80%;
+  width: 50%;
   border-radius: 10px;
   border: 3px solid black;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: center;
   align-items: center;
-  top: 65%;
-  z-index: -2;
+  top: 14%;
+  left: 50%;
 }
 
 .close {
