--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@
 header .icons {
   display: flex;
   padding: 20px;
-  width: 25%;
+  width: 28%;
   align-items: center;
   justify-content: center;
 }
@@ -248,6 +248,7 @@ header .current-date {
   }
   header .icons {
     padding: 10px;
+    flex-grow: 1;
   }
   header .current-date {
     font-size: 1rem;
